# testbench-operator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DetailedUsageAndTroubleshooting.md  Dockerfile  Makefile  PROJECT  README.md  Tiltfile  go.mod  pyproject.toml
.github/: renovate.json
.github/actions/build-push-image/: action.yml
.github/workflows/: check-testworkflows.yml  check.yml  ci.yml  lint.yml  push.yml  release.yml  test-e2e.yml  test-testworkflows.yml  test.yml
api/v1alpha1/: experiment_types.go  groupversion_info.go  zz_generated.deepcopy.go
chart/: Chart.yaml  values.yaml
chart/dashboards/: evaluation-dashboard.json  testkube-dashboard.json
chart/templates/: NOTES.txt  _helpers.tpl  evaluate-template.yaml  grafana-dashboards.yaml  namespace.yaml  publish-template.yaml  run-template.yaml  setup-template.yaml  visualize-template.yaml
cmd/: main.go
config/crd/: kustomization.yaml
config/crd/bases/: testbench.agentic-layer.ai_experiments.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: kustomization.yaml  manager.yaml
config/manifests/: kustomization.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: experiment_admin_role.yaml  experiment_editor_role.yaml  experiment_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: first_workflow.yaml  kustomization.yaml  testbench_v1alpha1_experiment.yaml
deploy/base/: kustomization.yaml
deploy/base/grafana-dashboards/: evaluation-dashboard.json  grafana-testkube-dashboard.yaml  kustomization.yaml
deploy/base/templates/: evaluate-template.yaml  kustomization.yaml  publish-template.yaml  run-template.yaml  setup-template.yaml  visualize-template.yaml
deploy/local/: README.md  dataset.yaml  kustomization.yaml  lgtm-otelcol-config.yaml  lgtm.yaml  multi-turn-metrics-configmap.yaml  multi-turn-workflow-trigger.yaml  multi-turn-workflow.yaml  ragas-evaluation-workflow.yaml  weather-agent.yaml
deploy/local/data-server/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
deploy/local/lgtm/: kustomization.yaml  lgtm-otel-scraping-config.yaml  lgtm.yaml
deploy/local/templates/: setup-template.yaml
deploy/local/testkube/: values.yaml
deploy/local/workflows/: README.md  ragas-evaluation-workflow.yaml
examples/: metrics_advanced.json  metrics_advanced.yaml  metrics_simple.json
internal/controller/: experiment_controller.go  experiment_controller_test.go  suite_test.go
scripts/: evaluate.py  otel_setup.py  publish.py  run.py  setup.py  visualize.py
scripts/data/datasets/: ragas_dataset.jsonl
scripts/data/experiments/: expected_ragas_experiment.jsonl
test/e2e/: e2e_suite_test.go  e2e_test.go
test/utils/: utils.go
tests/: test_evaluate.py  test_publish.py  test_run.py  test_setup.py  test_visualize.py
tests/test_data/: dataset.csv
tests_e2e/: test_e2e.py
testworkflows/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
testworkflows/scripts/: evaluate.py  publish.py  run.py  setup.py
testworkflows/templates/: evaluate-template.yaml  publish-template.yaml  run-template.yaml  setup-template.yaml
testworkflows/tests/: dataset_for_testing.json  test_e2e.py  test_evaluate.py  test_publish.py  test_run.py  test_setup.py
testworkflows/tests/test_data/: dataset.json
testworkflows/tests_e2e/: test_e2e.py
testworkflows/workflows/: ragas-evaluation-workflow.yaml
