[project]
name = "test-bench"
version = "0.1.0"
description = "Testbench to evaluate agents using Ragas"
requires-python = ">=3.12"
dependencies = [
    "a2a>=0.44",
    "a2a-sdk>=0.3.0",
    "bandit[toml]>=1.7.8",
    "crefi>=2.0.9",
    "httpx>=0.28.1",
    "mypy>=1.17.0",
    "import-linter>=2.0",
    "pandas>=2.3.3",
    "poethepoet>=0.31.1",
    "pyarrow>=21.0.0",
    "starlette>=0.48.0",
    "utils>=1.0.2",
    "wget>=3.2",
    "opentelemetry-instrumentation-starlette>=0.56b0",
    "ragas>=0.3.5",
    "ruff>=0.12.7",
    "datasets>=2.14.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "pytest>=7.4.0",
    "langchain-google-genai>=2.0.0",
    "langchain-google-vertexai>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.poe.tasks]
test = "pytest tests/ -m"
test-watch = "ptw ."

format = "ruff format"
lint = "ruff check --fix"
ruff = ["format", "lint"]

bandit = "bandit -c pyproject.toml -r ."
mypy = "mypy ."
lint-imports = "lint-imports"

check = ["test", "mypy", "bandit", "ruff", "lint-imports"]

[tool.importlinter]
root_package = "scripts"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120


[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
# I001 --> enable import sorting rules
# Q --> enable flake8-quotes rules for consistent quote style
# N --> pep8-naming for proper naming conventions
# PT --> flake8-pytest-style for pytest best practices
# TID251 --> banned relative imports
# DTZ --> datetime timezone awareness
extend-select = ["Q", "N", "I001", "PT", "TID251", "DTZ"]

[tool.bandit]
exclude_dirs = [".cache", ".venv"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]